--- a/styles/style.css
+++ b/styles/style.css
@@ -100,7 +100,7 @@ main.re-state .guess > span {
     margin-right: 10px;
     min-width: 200px;
 }
-main button {
+button {
     border-radius: 50px;
     border: none;
     padding: 10px 15px;
@@ -111,7 +111,7 @@ main button {
     cursor: pointer;
     transition: 0.2s;
 }
-main button:hover, main button.pressed {
+button:hover, button.pressed {
     background-color: #f8a295;
     color: white;
     box-shadow: 0 0 18px var(--secondary-bg);
@@ -148,4 +148,57 @@ main.re-state button {
 }
 .used > p > span.change {
     color: var(--page-bg);
+}
+.menu {
+    background-color: var(--primary-bg);
+    position: absolute;
+    top: 0;
+    right: 10px;
+    padding: 10px;
+    font-size: 85%;
+    text-align: center;
+    border-radius: 0 0 15px 15px;
+    color: var(--primary-fg);
+    transition: 0.4s 0.15s;
+    transform: translate(0, -90%);
+}
+.buttons {
+    display: flex;
+    justify-content: center;
+}
+.buttons > * {
+    margin: 0 5px 0 5px;
+    padding: 5px 10px;
+    font-size: 115%;
+    font-family: inherit;
+    letter-spacing: 0.1em;
+}
+.buttons > button:first-child {
+    background-color: #f9aba1;
+}
+.buttons > button:nth-child(2) {
+    background-color: #e9897c;
+}
+.buttons > button:last-child {
+    background-color: #ce5a4b;
+}
+.menu > p {
+    margin: 8px 0 0 0;
+}
+.opener {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 98%);
+    padding: 0 4px 6px 4px;
+    border-radius: 0 0 5px 5px;
+    background-color: var(--input-bg);
+    fill: var(--primary-fg);
+    cursor: pointer;
+}
+.opener:hover {
+    box-shadow: 0 0 18px var(--secondary-bg);
+}
+.menu:has(.opener:hover), .menu:hover, .menu:has(.opener:focus-within) {
+    transform: translate(0, 0);
 }
